[gd_scene load_steps=10 format=3 uid="uid://cmhndf60c2tas"]

[ext_resource type="Script" path="res://ComboLockGame.gd" id="1_4wk0a"]
[ext_resource type="Texture2D" uid="uid://daowjnkbddr3d" path="res://Assets/Texture assets/TempTutorialAssets/SVG/combowedgeRed.svg" id="1_8u0b5"]
[ext_resource type="Texture2D" uid="uid://db60ieoduw7nn" path="res://Assets/Texture assets/TempTutorialAssets/SVG/1Asset 9.svg" id="2_658id"]
[ext_resource type="Texture2D" uid="uid://w2qgrx230gij" path="res://Assets/Texture assets/TempTutorialAssets/SVG/1Asset 3.svg" id="3_3rih4"]
[ext_resource type="Texture2D" uid="uid://ddc3sg3yeinct" path="res://Assets/Texture assets/TempTutorialAssets/SVG/1Asset 8.svg" id="4_m8k8q"]
[ext_resource type="Texture2D" uid="uid://xv71t15md67k" path="res://Assets/Texture assets/TempTutorialAssets/SVG/1Asset 2.svg" id="5_b8rk3"]
[ext_resource type="Texture2D" uid="uid://cuxdkofcpga8x" path="res://Assets/Texture assets/TempTutorialAssets/SVG/1Asset 6.svg" id="6_yg2pl"]
[ext_resource type="Texture2D" uid="uid://df367w4iq1chi" path="res://Assets/Texture assets/TempTutorialAssets/SVG/1Asset 4.svg" id="7_co0x4"]
[ext_resource type="Texture2D" uid="uid://dphxevldokvth" path="res://Assets/Texture assets/TempTutorialAssets/SVG/1Asset 5.svg" id="8_qvx3y"]

[node name="ComboLockGame" type="Node2D"]

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 1.0
offset_top = 6.0
offset_right = 1922.0
offset_bottom = 1080.0
script = ExtResource("1_4wk0a")
red_button_normal_original = ExtResource("1_8u0b5")
blue_button_normal_original = ExtResource("3_3rih4")
green_button_normal_original = ExtResource("5_b8rk3")
yellow_button_normal_original = ExtResource("7_co0x4")

[node name="redButton" type="TextureButton" parent="Control"]
offset_left = 910.0
offset_top = 220.0
offset_right = 1227.0
offset_bottom = 534.0
texture_normal = ExtResource("1_8u0b5")
texture_pressed = ExtResource("2_658id")

[node name="blueButton" type="TextureButton" parent="Control"]
offset_left = 590.0
offset_top = 217.0
offset_right = 907.0
offset_bottom = 531.0
texture_normal = ExtResource("3_3rih4")
texture_pressed = ExtResource("4_m8k8q")
flip_h = true

[node name="greenButton" type="TextureButton" parent="Control"]
offset_left = 588.0
offset_top = 537.0
offset_right = 905.0
offset_bottom = 851.0
texture_normal = ExtResource("5_b8rk3")
texture_pressed = ExtResource("6_yg2pl")
flip_h = true
flip_v = true

[node name="yellowButton" type="TextureButton" parent="Control"]
offset_left = 907.0
offset_top = 534.0
offset_right = 1224.0
offset_bottom = 848.0
texture_normal = ExtResource("7_co0x4")
texture_pressed = ExtResource("8_qvx3y")
flip_v = true

[connection signal="pressed" from="Control/redButton" to="Control" method="_on_red_button_pressed"]
[connection signal="pressed" from="Control/blueButton" to="Control" method="_on_blue_button_pressed"]
[connection signal="pressed" from="Control/greenButton" to="Control" method="_on_green_button_pressed"]
[connection signal="pressed" from="Control/yellowButton" to="Control" method="_on_yellow_button_pressed"]
